2010-09-30  Robert Hogan  <robert@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Support for PlainTextController

        Unskip editing/text-iterator/basic-iteration.html

        https://bugs.webkit.org/show_bug.cgi?id=38805

        * DumpRenderTree/qt/DumpRenderTree.pro:
        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):
        (WebCore::DumpRenderTree::initJSObjects):
        * DumpRenderTree/qt/DumpRenderTreeQt.h:
        * DumpRenderTree/qt/PlainTextControllerQt.cpp: Added.
        (PlainTextController::PlainTextController):
        (PlainTextController::plainText):
        * DumpRenderTree/qt/PlainTextControllerQt.h: Added.

2010-09-30  Adam Barth  <abarth@webkit.org>

        Unreviewed.  Second attempt to fix sheriffbot.

        * Scripts/webkitpy/common/net/buildbot.py:

2010-09-30  Adam Barth  <abarth@webkit.org>

        Unreviewed.

        This patch should stop the sheriffbot from throwing an exception.

        * Scripts/webkitpy/common/net/buildbot.py:

2010-09-30  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Adam Roben.

        The same bots shouldn't run both Windows Debug Tests and Windows Release Tests.
        https://bugs.webkit.org/show_bug.cgi?id=46926

        * BuildSlaveSupport/build.webkit.org-config/config.json: Have two bots running Windows 
            Release Tests, and two bots running Windows Debug Tests, instead of four running both.

2010-09-30  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        webkit-patch find-flaky-tests should print results URLs
        https://bugs.webkit.org/show_bug.cgi?id=46917

        Printing out the results URL makes find-flaky-tests more actionable
        because you can see what happens when a test fails.  The output from
        the script is still pretty noisy, but it seems useful.

        * Scripts/webkitpy/tool/commands/queries.py:

2010-09-30  Chris Marrin  <cmarrin@apple.com>
